更新部分API